updated class file license statement

--- a/force-app/main/default/classes/SummitEventsController.cls
+++ b/force-app/main/default/classes/SummitEventsController.cls
@@ -1,6 +1,7 @@
-/**
- * Created by Thad-PC-2019 on 8/9/2020.
- */
+// Copyright (c) 2020, Salesforce.org. All rights reserved.
+// Use of this source code is governed by a BSD 3-Clause.
+// License can be found found in the LICENSE file in this repository.
+// Created by Thaddaeus Dahlberg on 8/9/2020.
 
 public with sharing class SummitEventsController {
 
