used Matt's full name.

--- a/force-app/main/default/classes/SummitEventsAfterLeadConversion.cls
+++ b/force-app/main/default/classes/SummitEventsAfterLeadConversion.cls
@@ -1,7 +1,7 @@
 // Copyright (c) 2020, Salesforce.org. All rights reserved.
 // Use of this source code is governed by a BSD 3-Clause.
 // License can be found found in the LICENSE file in this repository.
-// Created by Matt Hubert on 9/17/2021
+// Created by Matthew Hubert on 9/17/2021
 
 public class SummitEventsAfterLeadConversion {
     public static void afterUpdate(List<Lead> newLeads) {
